--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2018"
 
 [dependencies]
 zmq = "0.9.0"
-tower-web = "0.3.6"
-warp = "0.1.15"
-actix-web = "0.7.19"
+actix-web = "1.0.0-alpha.3"
+quick-protobuf = "0.6.3"
